# vphone

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/freetalk/vphone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/freetalk/pjinterface/: PJ.java
app/src/main/java/com/freetalk/vphone/: MainActivity.java  MyIntentBuilder.java  MyTileService.java  NotificationHandler.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/freetalk/vphone/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
pjapi/: build.gradle
pjapi/src/androidTest/java/com/freetalk/pjapi/: ExampleInstrumentedTest.java
pjapi/src/main/: AndroidManifest.xml
pjapi/src/main/pjapi/: CMakeLists.txt  pjApi.c
pjapi/src/main/pjapi/jni-include/: common.h
pjapi/src/main/res/values/: strings.xml
pjapi/src/test/java/com/freetalk/pjapi/: ExampleUnitTest.java
